--- a/src/App.scss
+++ b/src/App.scss
@@ -1,34 +1,42 @@
-.app{
-    padding: 0 !important;
-    .title{
-        height: 100px;
-        background-color: cornflowerblue;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        color: white;
+.app {
+  padding: 0 !important;
 
+  .title {
+    height: 100px;
+    background-color: cornflowerblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+  }
+
+  .to-do-list {
+    margin: 60px 0 0 0;
+
+    &__title {
+      background-color: #fff;
+      height: 90px;
+      border-top-left-radius: 15px;
+      border-bottom-right-radius: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #dadada;
+
+      h2 {
+        color: #008dd0;
+        letter-spacing: 10px;
+      }
     }
 
-    .to-do-list{
-        margin: 60px 0 0 0;
-
-    &__title{
-        background-color: #fff;
-        height: 90px;
-        border-top-left-radius: 15px;
-        border-bottom-right-radius: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid #dadada;
-
-        h2{
-            color: #008dd0;
-            letter-spacing: 10px;
-        }
+    &__list {
+      padding: 0;
+      border-left: 1px solid #dadada;
+      border-right: 1px solid #dadada;
+      background-color: white;
+      max-height: calc(100vh - 400px);
+      overflow: scroll;
     }
-
-    }
+  }
 }
