--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,21 @@
       background-color: white;
       max-height: calc(100vh - 400px);
       overflow: scroll;
+      .loading{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px 0px;
+
+        span{
+          padding-top: 20px;
+        }
+      }
+      h3{
+        text-align: center;
+        padding: 20px 0px;
+      }
     }
   }
 }
